<resources>
    <string name="app_name">Kind</string>
    <string name="string_feed_title">Feed</string>
    <string name="string_find_title">Find</string>
    <string name="string_profile_title">Profile</string>
    <string name="string_settings_title">Settings</string>
    <string name="string_profile_user">Welcome, testUser99!</string>

    <string name="looks_like_you_re_not_logged_in">Looks like you\'re not logged in</string>
    <string name="or">or</string>
    <string name="sign_out">Sign out</string>
    <string name="more">more</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="string_private">Private</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="missing_field">Please fill out all fields</string>

    <string name="looks_like_you_have_posted_yet">Looks like you have not posted yet.</string>
    <string name="looks_like_you_have_not_liked_any_posts_yet">Looks like you have not liked any posts yet.</string>
  
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_like">Be the first to like</string>
    <string name="less">less</string>
    <string name="login_toast">Create an account or log in to heart posts</string>
</resources>
