<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <Button
            android:id="@+id/btn_sign_up"
            style="@style/AppTheme.button.light"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password" />

        <Button
            android:id="@+id/btn_edit_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@null"
            android:drawableEnd="@drawable/ic_edit"
            android:text="@string/edit_photo"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/circle_image_root"
            app:layout_constraintStart_toStartOf="@+id/circle_image_root"
            app:layout_constraintTop_toBottomOf="@+id/circle_image_root" />

        <EditText
            android:id="@+id/tv_password"
            style="@style/AppTheme.EditText"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <EditText
            android:id="@+id/tv_confirm_password"
            style="@style/AppTheme.EditText"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <EditText
            android:id="@+id/tv_email"
            style="@style/AppTheme.EditText"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName|textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_private" />

        <EditText
            android:id="@+id/tv_user_name"
            style="@style/AppTheme.EditText"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName|textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_photo" />

        <ProgressBar
            android:id="@+id/pb_auth"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_up" />

        <TextView
            android:id="@+id/tv_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:text="@string/string_private"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/circle_image_root"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/circle_image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@color/colorAccent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_select_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/select_a_photo"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>